--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
       <li>
         A younger well Developer impressing with work that i have done in this
-        flied was pretty amazing.
+        field.
       </li>
       <li>My work will explain evverthing to you.</li>
     </ul>
